--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -8,7 +8,7 @@ footer {
 
 footer div {
     display: flex;
-    align-items: center; /* Alinea verticalmente los elementos en el div */
+    align-items: center; 
     margin: 10px;
 }
 
