--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -1,142 +1,154 @@
 @media screen and (max-width: 980px) {
+    /* Ajusta el tamaño de la fuente del título en la sección hero */
     .hero h2 {
         font-size: 70px;
     }
 
+    /* Cambia la organizacion del header a una columna */
     header {
         flex-direction: column;
         position: static;
     }
 
+    /* Achica el tamaño de la imagen en la sección info */
     .info img {
         width: 50%;
     }
 }
 
 @media screen and (max-width: 750px) {
+    /* Cambia a columna en pantallas más pequeñas */
     header nav ul {
         flex-direction: column;
         margin: 10px;
     }
 }
 
-
 @media screen and (max-width: 1711px) {
+    /* Reorganiza las tarjetas en un grid de 2 columnas */
     .container-cards {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);   
-        gap: 20px;                               
-        justify-content: center;                 
-        padding: 0 40px;                         
-        margin: 0 auto;                          
-        width: 100%;                             
-        box-sizing: border-box;                  
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        justify-content: center;
+        padding: 0 40px;
+        margin: 0 auto;
+        width: 100%;
+        box-sizing: border-box;
     }
 
+    /* Ajusta el ancho de las tarjetas */
     .card {
-        max-width: 500px;                        
-        width: 100%;                             
-        margin: 0 auto;                          
+        max-width: 500px;
+        width: 100%;
+        margin: 0 auto;
     }
 }
-
-
 
 @media screen and (max-width: 750px) {
+    /* Cambia la disposición de las tarjetas a una columna y ajusta los margenes y el padding */
     .container-cards {
         display: flex;
-        flex-direction: column;    
-        align-items: center;        
-        gap: 20px;                  
-        padding: 0 15px;            
-        margin: 0 auto;           
-        width: 100%;                
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding: 0 15px;
+        margin: 0 auto;
+        width: 100%;
     }
 
+    /* Ajusta el tamaño de las tarjetas para pantallas mas chicas */
     .card {
-        width: 90%;                 
-        max-width: 400px;           
-        margin: 0 auto;           
+        width: 90%;
+        max-width: 400px;
+        margin: 0 auto;
     }
 
+    /* Ajusta la imagen dentro de la tarjeta para que ocupe el ancho completo */
     .card img {
-        width: 100%;           
-        height: auto;              
+        width: 100%;
+        height: auto;
     }
 }
-
 
 @media screen and (max-width: 450px) {
+    /* Ajusta las tarjetas para pantallas muy pequeñas */
     .container-cards {
         display: flex;
-        flex-direction: column;  
-        align-items: center;     
-        gap: 15px;              
-        margin: 0;               
-        width: 100%;             
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        margin: 0;
+        width: 100%;
     }
 
+    /* Reduce el tamaño de las tarjetas en pantallas mas pequeñas */
     .card {
-        width: 70%;              
-        margin: 0 auto;         
+        width: 70%;
+        margin: 0 auto;
     }
 }
 
-
 @media (max-width: 850px) {
+    /* Ajusta los márgenes y el tamaño de la letra en la sección hist */
     .hist {
-        padding: 10px; 
-        max-width: 100%; 
+        padding: 10px;
+        max-width: 100%;
     }
 
+    /* Asegura que las imágenes en la seccion hist ocupen el ancho completo */
     .hist img {
-        max-width: 100%; 
-        height: auto; 
+        max-width: 100%;
+        height: auto;
     }
 
+    /* Ajusta el tamaño de la fuente en los títulos y parrafos de la sección hist */
     .hist h2 {
-        font-size: nth($fuente, 1 ); 
+        font-size: nth($fuente, 1);
     }
 
     .hist p {
-        font-size: nth($fuente, 1 ); 
+        font-size: nth($fuente, 1);
     }
 }
 
 @media screen and (max-width: 1700px) {
+    /* Ajustes generales para la sección info */
     .info img {
-        width: 60%; /* Ajusta el ancho de la imagen */
+        width: 60%;
     }
 
     h2 {
-        font-size: nth($fuente, 2 ); 
+        font-size: nth($fuente, 2);
     }
 
     p {
-        font-size: nth($fuente, 1 ); 
+        font-size: nth($fuente, 1);
         line-height: 1.5;
     }
 }
 
 @media screen and (max-width: 800px) {
+    /* Reorganiza la sección info a columna y ajusta las imagenes y texto */
     .info {
         flex-direction: column;
         align-items: center;
     }
 
     .info img {
-        width: 80%; 
+        width: 80%;
     }
 
     h2 {
-        font-size: nth($fuente, 2 );
+        font-size: nth($fuente, 2);
     }
 
     p {
-        font-size: nth($fuente, 1 ); 
+        font-size: nth($fuente, 1);
         line-height: 1.4;
     }
 
+    /* Asegura que las imágenes del carrusel se ajusten correctamente */
     .carousel-item img {
         max-width: 100%;
         height: auto;
@@ -144,16 +156,17 @@
 }
 
 @media screen and (max-width: 400px) {
+    /* Ajustes finales para pantallas muy pequeñas en la seccion info */
     .info img {
-        width: 100%; 
+        width: 100%;
     }
 
     h2 {
-        font-size: nth($fuente, 2 ); 
+        font-size: nth($fuente, 2);
     }
 
     p {
-        font-size: nth($fuente , 1 ); 
+        font-size: nth($fuente, 1);
         line-height: 1.3;
     }
 
@@ -162,101 +175,104 @@
         height: auto;
     }
 }
+
 @media screen and (max-width: 1700px) {
+    /* Reorganiza la seccion pasion a columna y ajusta imágenes y textos */
     .pasion {
-        flex-direction: column; 
-        align-items: center; 
+        flex-direction: column;
+        align-items: center;
 
         h2 {
-            font-size: nth($fuente , 3 ); 
-            height: auto; 
-            padding: 15px; 
+            font-size: nth($fuente, 3);
+            height: auto;
+            padding: 15px;
         }
 
         img {
-            width: 60%; 
-            height: auto; 
-            margin-bottom: 15px; 
+            width: 60%;
+            height: auto;
+            margin-bottom: 15px;
         }
 
         p {
-            width: 80%; 
-            font-size: nth($fuente, 2 ); 
-            height: auto; 
-            padding: 15px; 
+            width: 80%;
+            font-size: nth($fuente, 2);
+            height: auto;
+            padding: 15px;
         }
     }
 }
 
 @media screen and (max-width: 800px) {
-    .pasion {
-        h2 {
-            font-size: nth($fuente, 2 ) 
-        }
+    /* Ajusta los estilos en la sección pasion para pantallas pequeñas */
+    .pasion h2 {
+        font-size: nth($fuente, 2);
+    }
 
-        img {
-            width: 80%; 
-        }
+    img {
+        width: 80%;
+    }
 
-        p {
-            width: 90%; 
-            font-size: nth($fuente, 1 ); 
-        }
+    p {
+        width: 90%;
+        font-size: nth($fuente, 1);
     }
 }
 
 @media screen and (max-width: 400px) {
-    .pasion {
-        h2 {
-            font-size: nth($fuente, 1 ); 
-        }
+    /* Ajustes finales para pantallas muy chicas en la sección pasion */
+    .pasion h2 {
+        font-size: nth($fuente, 1);
+    }
 
-        img {
-            width: 95%;
-        }
+    img {
+        width: 95%;
+    }
 
-        p {
-            width: 100%; 
-            font-size: nth($fuente, 1 ); 
-            padding: 10px; 
-        }
+    p {
+        width: 100%;
+        font-size: nth($fuente, 1);
+        padding: 10px;
     }
 }
 
 @media screen and (max-width: 1700px) {
+    /* Ajusta los elementos del footer para pantallas mas chicas */
     footer iframe {
-        width: 60%; 
-        height: auto; 
-        max-width: 500px; 
+        width: 60%;
+        height: auto;
+        max-width: 500px;
     }
 
     footer a img {
-        width: 60px; 
+        width: 60px;
         height: 60px;
     }
 }
 
 @media screen and (max-width: 800px) {
+    /* Ajusta el tamaño de los elementos del footer en pantallas chicas */
     footer iframe {
-        width: 80%; 
+        width: 80%;
         height: auto;
     }
 
     footer a img {
-        width: 50px; 
+        width: 50px;
         height: 50px;
         margin: 10px;
     }
 }
 
 @media screen and (max-width: 540px) {
+    /* Ajustes finales para el footer en pantallas mas chicas */
     footer iframe {
-        width: 100%; 
-        height: 200px; 
+        width: 100%;
+        height: 200px;
     }
 
     footer a img {
-        width: 40px; 
+        width: 40px;
         height: 40px;
         margin: 5px;
     }
